--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,11 +3,11 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 26
     defaultConfig {
-        applicationId "com.enerjisa.mypass2"
+        //applicationId "com.elerot.mypass2"
         minSdkVersion 21
         targetSdkVersion 26
-        versionCode 5
-        versionName "1.5"
+        versionCode 6
+        versionName "1.6"
     }
 
     buildTypes {
