--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,24 +13,15 @@
         android:label="@string/app_name"
         android:theme="@style/Theme.AppCompat" >
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name" >
-        </activity>
-        <activity
-            android:name=".NewUsrActivity"
-            android:label="@string/title_activity_new_usr"
-            android:parentActivityName=".MainActivity" >
-        </activity>
-        <activity
-            android:name=".DatasActivity"
+            android:name=".Activity.DatasActivity"
             android:label="@string/title_activity_datas" >
         </activity>
         <activity
-            android:name=".NewData"
+            android:name=".Activity.NewDataActivity"
             android:label="@string/title_activity_new_data" >
         </activity>
         <activity
-            android:name=".Main2Activity"
+            android:name=".Activity.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -38,7 +29,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".simplefilechooser.ui.FileChooserActivity"
+            android:name=".SimpleFileChooser.ui.FileChooserActivity"
             android:label="@string/title_activity_datas" >
         </activity>
 
